--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,82 @@
+body {
+    display: flex;
+    height: 100vw;
+    width: 100vw;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+@keyframes buttonPress {
+    0% {
+        transform: translateY(5px);
+    }
+
+    40% {
+        transform: translateY(30px);
+    }
+
+    60% {
+        transform: translateY(30px);
+    }
+
+    100% {
+        transform: translateY(0px);
+    }
+}
+
+.buttonPressed {
+    animation: 0.28s ease-out buttonPress;
+    animation-fill-mode: forwards;
+}
+
+button {
+    font-size: 2rem;
+    letter-spacing: 5px;
+    font-weight: 600;
+    color: white;
+    height: 60px;
+    width: 400px;
+    border: 5px solid black;
+    border-bottom: 0;
+    border-radius: 20px 20px 0 0;
+    background-color: red;
+    transform: translateY(0px);
+    transition: 
+    transform 0.3s ease-in,
+    background-color 0.3s,
+    color 0.3s;
+}
+
+button:hover {
+    transform: translateY(5px);
+}
+
 #sketchpad-container {
+    position: relative;
     display: flex;
     width: 640px;
     height: 640px;
-    border: 5px solid black;
+    border: 7px solid black;
+    border-radius: 15px;
     padding: 0;
     gap: 0;
     flex-wrap: wrap;
+    overflow: hidden;
 }
 
 .square {
+    position: relative;
     border: 0;
     padding: 0;
     flex: 0;
     flex-basis: 10px;
-    background-color: white;
+    background-color: rgb(236, 236, 236);
 }
